--- a/src/app/statistics/attendance-table/attendance-table.component.html
+++ b/src/app/statistics/attendance-table/attendance-table.component.html
@@ -13,7 +13,9 @@
 >
   <ng-container matColumnDef="rank">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Platz</th>
-    <td mat-cell *matCellDef="let element">{{ element.rank }}</td>
+    <td mat-cell *matCellDef="let element">
+      <hop-rank [rank]="element.rank"></hop-rank>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="name">
