--- a/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
+++ b/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
@@ -1,4 +1,4 @@
-<h2>Finalteilnahmen</h2>
+<h2>Finalteilnahmen (seit 01.01.2024)</h2>
 
 @if (loading()) {
   <hop-loading-mask></hop-loading-mask>
@@ -13,7 +13,9 @@
 >
   <ng-container matColumnDef="rank">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Platz</th>
-    <td mat-cell *matCellDef="let element">{{ element.rank }}</td>
+    <td mat-cell *matCellDef="let element">
+      <hop-rank [rank]="element.rank"></hop-rank>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="name">
