--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,8 @@
 // Plus imports for other components in your app.
 @use './m3-theme' as schockenTheme;
 
+@use './app/statistics/streak-chart/chart-theme' as chartTheme;
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
@@ -21,6 +23,8 @@
 //  )
 //));
 $schocken-frontend-theme: schockenTheme.$light-theme;
+
+@include chartTheme.color($schocken-frontend-theme);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -75,6 +79,10 @@ $schocken-frontend-theme: schockenTheme.$light-theme;
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+a {
+  color: mat.get-theme-color($schocken-frontend-theme, primary);
+}
 
 .info-text {
   color: #888;
