authentication and authorization with auth0

--- a/src/app/game/round/round.component.html
+++ b/src/app/game/round/round.component.html
@@ -31,3 +31,5 @@
     </button>
   </div>
 }
+
+<hop-info-box *hopHasPermission="Permission.READ_DEBUGGING_INFO" [message]="round().id"></hop-info-box>
