--- a/src/app/administration/player-administration/player-administration.component.html
+++ b/src/app/administration/player-administration/player-administration.component.html
@@ -6,7 +6,9 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+    <td mat-cell *matCellDef="let element">
+      <span [hopCurrentUser]="element.id">{{element.name}}</span>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="registered">
@@ -25,18 +27,25 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="auth0UserId">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Auth0-UserID</th>
+    <td mat-cell *matCellDef="let element">{{element.auth0UserId}}</td>
+  </ng-container>
+
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <button mat-icon-button (click)="openDialog(element)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button (click)="openConfirmation(element.id, element.name)">
-        <mat-icon>delete</mat-icon>
-      </button>
+      @if (!element.isDeleted) {
+        <button mat-icon-button (click)="openDialog(element)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="openConfirmation(element.id, element.name)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      }
     </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;" [class.deleted-player]="row.isDeleted"></tr>
 </table>
