--- a/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
+++ b/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
@@ -20,7 +20,9 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Spieler</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let element">
+      <span [hopCurrentUser]="element.playerId">{{ element.name }}</span>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="count">
