--- a/src/app/statistics/host-table/host-table.component.html
+++ b/src/app/statistics/host-table/host-table.component.html
@@ -23,7 +23,9 @@
 
   <ng-container matColumnDef="name">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Gastgeber</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let element">
+      <span [hopCurrentUser]="element.hostedById">{{ element.name }}</span>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="count">
