--- a/src/app/statistics/streak-chart/_chart-theme.scss
+++ b/src/app/statistics/streak-chart/_chart-theme.scss
@@ -1,6 +1,23 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
+@mixin gradient-striped($color: rgba(255,255,255,.15), $angle: 45deg) {
+  background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
+}
+
+@keyframes progress-bar-stripes {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 40px 0;
+  }
+}
+
+@mixin animation($animation) {
+  animation: $animation;
+}
+
 @mixin color($theme) {
   .inner-bar {
     background-color: mat.get-theme-color($theme, primary);
