--- a/src/app/statistics/streak-chart/streak-chart.component.scss
+++ b/src/app/statistics/streak-chart/streak-chart.component.scss
@@ -1,21 +1,6 @@
 @use '@angular/material' as mat;
 
-@mixin gradient-striped($color: rgba(255,255,255,.15), $angle: 45deg) {
-  background-image: linear-gradient($angle, $color 25%, transparent 25%, transparent 50%, $color 50%, $color 75%, transparent 75%, transparent);
-}
-
-@keyframes progress-bar-stripes {
-  from {
-    background-position: 0 0;
-  }
-  to {
-    background-position: 40px 0;
-  }
-}
-
-@mixin animation($animation) {
-  animation: $animation;
-}
+@import './chart-theme';
 
 .grid {
   display: grid;
@@ -26,6 +11,16 @@
     justify-content: start;
     align-items: center;
     padding: 8px 4px;
+  }
+
+  & > .rank-with-name {
+    hop-rank {
+      padding-right: 5px;
+    }
+  }
+
+  & > .odometer {
+    justify-content: end;
   }
 }
 
