--- a/src/app/statistics/streaks/streaks.component.html
+++ b/src/app/statistics/streaks/streaks.component.html
@@ -21,7 +21,16 @@
 </div>
 
 <hop-hint>
-  <div>Grauer Balken: Persönlicher Rekord, inkl. Höhe und Zeitpunkt der Aufstellung (bei gleicher Anzahl wird der neuere "eingestellte" Rekord als besser bewertet)</div>
-  <div>Grüner Balken: Aktueller Lauf</div>
-  <div>Leuchtender Balken: Aktueller Lauf entspricht persönlichem Rekord, der somit ggf. weiter ausgebaut werden kann</div>
+  <div class="legend-row">
+    <div class="bar outer-bar"></div>
+    Persönlicher Rekord (bei gleicher Anzahl wird der neuere "eingestellte" Rekord als besser bewertet)
+  </div>
+  <div class="legend-row">
+    <div class="bar inner-bar"></div>
+    Aktueller Lauf
+  </div>
+  <div class="legend-row">
+    <div class="bar inner-bar shine"></div>
+    Aktueller Lauf entspricht persönlichem Rekord, der somit ggf. weiter ausgebaut werden kann
+  </div>
 </hop-hint>
