--- a/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
+++ b/src/app/statistics/finals-attendance-table/finals-attendance-table.component.html
@@ -39,7 +39,7 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" [attr.colspan]="displayedColumns.length">
-      Es gibt keine Daten für die ausgewählten Filter.
+      <p class="no-data">Es gibt keine Daten für die ausgewählten Filter.</p>
     </td>
   </tr>
 </table>
