--- a/src/app/statistics/host-table/host-table.component.html
+++ b/src/app/statistics/host-table/host-table.component.html
@@ -6,16 +6,9 @@
   mat-table
   [dataSource]="dataSource"
   matSort
-  matSortActive="rank"
-  matSortDirection="asc"
+  matSortActive="count"
+  matSortDirection="desc"
 >
-  <ng-container matColumnDef="rank">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Platz</th>
-    <td mat-cell *matCellDef="let element">
-      <hop-rank [rank]="element.rank"></hop-rank>
-    </td>
-  </ng-container>
-
   <ng-container matColumnDef="placeType">
     <th mat-header-cell mat-sort-header *matHeaderCellDef>Typ</th>
     <td mat-cell *matCellDef="let element">{{ element.placeType | placeTypeToLabel }}</td>
@@ -37,7 +30,7 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   <tr class="mat-row" *matNoDataRow>
     <td class="mat-cell" [attr.colspan]="displayedColumns.length">
-      Es gibt keine Daten für die ausgewählten Filter.
+      <p class="no-data">Es gibt keine Daten für die ausgewählten Filter.</p>
     </td>
   </tr>
 </table>
