--- a/src/app/statistics/streak-chart/streak-chart.component.html
+++ b/src/app/statistics/streak-chart/streak-chart.component.html
@@ -5,7 +5,7 @@
     @for (streak of streaks(); track streak.playerId) {
       @let outerWidth = (streak.maxStreak / overallMaxStreak()) * 100;
       @let innerWidth = (streak.currentStreak / streak.maxStreak) * outerWidth;
-      <div>
+      <div class="rank-with-name">
         <hop-rank [rank]="streak.rank"></hop-rank>
         <span [hopCurrentUser]="streak.playerId">{{streak.name}}</span>
       </div>
@@ -26,7 +26,7 @@
           </div>
         }
       </div>
-      <div style="justify-content: end;">
+      <div class="odometer">
         <hop-odometer [countTo]="streak.maxStreak"></hop-odometer>
         @if (streak.lastRoundIdOfStreak && streak.gameId) {
           (<a [href]="'game/' + streak.gameId + '?roundId=' + streak.lastRoundIdOfStreak">{{streak.datetime | date:'MM/yyyy'}}</a>)
