--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,4 @@
-<h1>404</h1>
+<div class="container-404">
+  <h1>Diese Seite konnte nicht gefunden werden.</h1>
+  <img src="assets/404.jpg"/>
+</div>
