--- a/src/app/constitution/constitution.component.html
+++ b/src/app/constitution/constitution.component.html
@@ -1,1 +1,5 @@
-<p>constitution works!</p>
+<ngx-extended-pdf-viewer
+  [src]="'assets/satzung.pdf'"
+  [showToolbar]="false"
+  [zoom]="'auto'"
+></ngx-extended-pdf-viewer>
